Made input Awesomebar smaller and fixed jumping of icons when activating Awesomebar

--- a/Private Mode Style/userChrome.css
+++ b/Private Mode Style/userChrome.css
@@ -252,12 +252,18 @@ LAYOUT
 #urlbar-input-container {
     border-radius: 3px !important;
 }
+#urlbar[breakout][breakout-extend] {
+    left: calc(0 * var(--urlbar-margin-inline)) !important;
+    width: calc(100% + 0 * var(--urlbar-margin-inline)) !important;
+}
 #urlbar[breakout][breakout-extend][breakout-extend-animate] {
-    top: 2.5px !important;
+    top: 10px !important;
 }
 #urlbar[breakout][breakout-extend][breakout-extend-animate] > #urlbar-input-container {
-    height: 35px !important;
-    padding: 2px !important;
+    height: 24px !important;
+    padding-block: 1px !important;
+    padding-inline: 1px !important;
+    margin: -1px 0px !important;
 }
 #urlbar, #searchbar {
     -moz-window-dragging: no-drag !important;
@@ -267,11 +273,10 @@ LAYOUT
     height: 25px !important;
 }
 #urlbar[focused="true"] {
-    border-radius: 7px !important; 
+    border-radius: 4px !important; 
 }
 #searchbar[focused="true"] {
-    border-radius: 7px !important; 
-
+    border-radius: 4px !important; 
 }
 #searchbar:not([focused="true"]) {
     border-radius: 3px !important; 
@@ -319,9 +324,17 @@ LAYOUT
 }
 #urlbar .search-one-offs:not([hidden]) {
     padding-block: 5px !important;
+    height: 25px !important;
 }
 .search-one-offs[is_searchbar="true"]) {
     border-top: none !important;
+}
+#urlbar .search-panel-one-offs-header,
+#urlbar .search-panel-one-offs,
+#urlbar .search-panel-one-offs-container,
+#urlbar .searchbar-engine-one-off-item {
+    height: 20px !important;
+    min-height: 20px !important;
 }
 
 /* selected text and icons url bar */
