--- a/Titlebar Enabled/userChrome.css
+++ b/Titlebar Enabled/userChrome.css
@@ -343,12 +343,18 @@ Normal mode
 #urlbar-input-container {
     border-radius: 3px !important;
 }
+#urlbar[breakout][breakout-extend] {
+    left: calc(0 * var(--urlbar-margin-inline)) !important;
+    width: calc(100% + 0 * var(--urlbar-margin-inline)) !important;
+}
 #urlbar[breakout][breakout-extend][breakout-extend-animate] {
-    top: 2.5px !important;
+    top: 10px !important;
 }
 #urlbar[breakout][breakout-extend][breakout-extend-animate] > #urlbar-input-container {
-    height: 35px !important;
-    padding: 2px !important;
+    height: 24px !important;
+    padding-block: 1px !important;
+    padding-inline: 1px !important;
+    margin: -1px 0px !important;
 }
 #urlbar, #searchbar {
     -moz-window-dragging: no-drag !important;
@@ -359,12 +365,12 @@ Normal mode
 }
 #urlbar[focused="true"] {
     border: 1px solid silver !important;
-    border-radius: 7px !important; 
+    border-radius: 4px !important; 
     background: #ffffff !important;
 }
 #searchbar[focused="true"] {
     border: 1px solid silver !important;
-    border-radius: 7px !important; 
+    border-radius: 4px !important; 
     background: #ffffff !important;
 }
 #searchbar:not([focused="true"]) {
@@ -419,9 +425,17 @@ Normal mode
 }
 #urlbar .search-one-offs:not([hidden]) {
     padding-block: 5px !important;
+    height: 25px !important;
 }
 .search-one-offs[is_searchbar="true"]) {
     border-top: none !important;
+}
+#urlbar .search-panel-one-offs-header,
+#urlbar .search-panel-one-offs,
+#urlbar .search-panel-one-offs-container,
+#urlbar .searchbar-engine-one-off-item {
+    height: 20px !important;
+    min-height: 20px !important;
 }
 
 /* selected text and icons url bar */
